--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -11,67 +11,77 @@
     <LinearLayout
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="9"
-            android:orientation="vertical">
+            android:paddingHorizontal="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/image_card"
+                android:layout_marginRight="10dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="6dp">
 
-            <TextView
-                android:id="@+id/cart_item_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:text="Shoe 01"
-                android:textAllCaps="true"
-                android:textStyle="bold" />
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY" />
 
-
-            <TextView
-                android:id="@+id/cart_item_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:text="100,000"
-                android:textAllCaps="true"
-                android:textStyle="italic" />
-            <TextView
-                android:id="@+id/cart_stock"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:text="10,000"
-                android:textAllCaps="true"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/cart_total_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:gravity="center_vertical|start"
-                android:text="10,000"
-                android:textAllCaps="true"
-                android:textStyle="italic" />
+            </androidx.cardview.widget.CardView>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/name"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorBlack"
+                    android:text="Tongtol premium besi / tongkat E Toll Murah / Tongkat Flexibel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:text="Linen silver, Mattboard cream, Kaca beling"
+                    android:id="@+id/varianDetail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+                <TextView
+                    android:text="Rp 10.000"
+                    android:id="@+id/price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
 
         </LinearLayout>
 
-        <ImageView
-            android:src="@drawable/ic_clear"
-            android:id="@+id/cart_item_delete"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|end" />
-
-
+        <LinearLayout
+            android:paddingHorizontal="10dp"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:textColor="@color/colorBlack"
+                android:text="Jumlah Barang: 1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:src="@drawable/ic_baseline_remove_shopping_cart_24"
+                android:id="@+id/removeItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
