--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -38,17 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
-                android:layout_margin="10dp"
-                android:background="@drawable/border_black"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <Spinner
-                    android:id="@+id/order_option"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:padding="5dp" />
-            </LinearLayout>
-            <LinearLayout
+                android:layout_marginTop="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
