--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -70,6 +70,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/qty"
                 android:layout_weight="1"
                 android:textStyle="bold"
                 android:textColor="@color/colorBlack"
